--- a/style/style.css
+++ b/style/style.css
@@ -213,32 +213,30 @@ main {
   border-radius: 18px;
   background: rgb(34, 34, 34);
 }
-.runner-textbox{
-    padding: 36px 40px;
-    width: 443px;
+.runner-textbox {
+  padding: 36px 40px;
+  width: 443px;
 }
-.runner-title{
-    font-size: 48px;
-    font-weight: 900;
-
+.runner-title {
+  font-size: 48px;
+  font-weight: 900;
 }
-.runner-description{
-    color: var(--secondary-color);
-    font-weight: 400;
-    font-size: 14px;
-    /* margin: 14px 0 34px; */
-    padding: 14px 0  34px;
+.runner-description {
+  color: var(--secondary-color);
+  font-weight: 400;
+  font-size: 14px;
+  /* margin: 14px 0 34px; */
+  padding: 14px 0 34px;
 }
-.runner-photo{
-    padding: 30px 30px 30px 160px;
-    width: 566px;
-    /* height: 312px; */
-
+.runner-photo {
+  padding: 30px 30px 30px 160px;
+  width: 566px;
+  /* height: 312px; */
 }
-.runner-photo img{
-    width: 100%;
-    height: 100%;
-    border-radius: 18px;
+.runner-photo img {
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
 }
 .exercise-container {
   width: 55.3%;
@@ -246,24 +244,73 @@ main {
   margin-top: 100px;
   color: #fff;
 }
-.exercise-title{
-    font-size: 48px;
-    font-weight: 900;
+.exercise-title {
+  font-size: 48px;
+  font-weight: 900;
 }
-.exercise-description{
-    font-size: 14px;
-    color: var(--secondary-color);
-    margin: 14px 0 58px;
+.exercise-description {
+  font-size: 14px;
+  color: var(--secondary-color);
+  margin: 14px 0 58px;
 }
-.gallery-column1{
+.gallery-column1 {
   display: flex;
-  gap: 15px;
-
 }
-.gallery-column2{
+.gallery-column2 {
   display: flex;
-  gap: 15px;
-  margin-top: 15px;
-
 }
-
+.item {
+  height: 250px;
+}
+.item-layer {
+  width: 100%;
+  height: 100%;
+}
+.exercise1 {
+  background-image: url(../asset/images/exercise1.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.exercise1 .item-layer {
+  background-color: rgba(6, 255, 210, 0.5);
+}
+.exercise2 {
+  background-image: url(../asset/images/exercise2.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.exercise2 .item-layer {
+  background-color: rgba(255, 0, 0, 0.3);
+}
+.exercise3 {
+  background-image: url(../asset/images/exercise3.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.exercise3 .item-layer {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.exercise4 {
+  background-image: url(../asset/images/exercise4.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.exercise4 .item-layer {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.exercise5 {
+  background-image: url(../asset/images/exercise5.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.exercise5 .item-layer {
+  background-color: rgba(66, 255, 0, 0.3);
+}
+.exercise6 {
+  background-image: url(../asset/images/exercise6.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.exercise6 .item-layer {
+  background-color: rgba(0, 71, 255, 0.3);
+}
