--- a/style/style.css
+++ b/style/style.css
@@ -368,6 +368,170 @@ main {
   color: var(--secondary-color);
   margin-top: 14px;
 }
-table th,td{
-  color: white;
+th{
+    color: var(--primary-text-color)
 }
+td{
+  color: var(--secondary-color);
+}
+.chart-calculator{
+  background-color:rgb(34, 34, 34); 
+}
+.chart-calculator .container{
+  width: 55.3%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 52px 0;
+
+  
+}
+
+.calculator{
+  width: 577px;
+  
+}
+
+.chart-title,.cal-title{
+  font-size: 24px;
+  font-weight: 900;
+  color: var(--primary-text-color);
+}
+.chart-title{
+  margin-bottom: 24px;
+}
+.cal-description{
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--secondary-color);
+  margin: 18px 0;
+
+}
+.chart table , th, td{
+  border: 1px solid #fff;
+  border-collapse: collapse;
+  padding: 10px;
+  text-align: left;
+}
+form{
+  display: grid;
+  grid-template-columns: repeat(2 ,1fr);
+  gap: 10px;
+  
+
+}
+input , select{
+  padding: 20px;
+  border: none;
+  border-radius: 18px;
+}
+.team{
+  width: 55.3%;
+  margin: 0 auto;
+}
+.team-title{
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--primary-text-color);
+  margin-top: 50px;
+  text-align: center;
+}
+.team-description{
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--secondary-color);
+  margin: 10px 0 50px 0;
+  text-align: center;
+}
+.team-member{
+  background-color: rgba(255, 255, 255, 0.1);
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 10px;
+  padding: 10px;
+  border-radius: 18px;
+  margin-top: 24px;
+}
+.team-member > div{
+  width: 100%;
+  height: 250px;
+  /* background-color: #e6533c; */
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 5px;
+  position: relative;
+}
+.member1{
+  background-image: url(../asset/images/trainer1.png);
+}
+.member2{
+  background-image: url(../asset/images/trainer2.png);
+}
+.member3{
+  background-image: url(../asset/images/trainer3.png);
+}
+.member4{
+  background-image: url(../asset/images/trainer4.png);
+}
+.member5{
+  background-image: url(../asset/images/trainer5.png);
+}
+.member6{
+  background-image: url(../asset/images/trainer6.png);
+}
+.trainer-title{
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  color: var(--secondary-color);
+}
+.trainer-title h4{
+  color: #fff;
+}
+.footer{
+  background: rgba(255, 255, 255, 0.1);
+  height: 600px;
+  margin-top: 88px;
+
+}
+.footer .container{
+  width: 55.3%;
+  margin: 0 auto;
+  
+}
+
+
+
+
+
+
+
+
+
+
+/* .team-member{
+  background-color: gray;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+.member1{
+  background-color: #e6533c;
+  background-image: url(../asset/images/trainer1.png);
+  background-repeat: no-repeat;
+  background-size: 300px 250px;
+}
+.member2{
+  background-image: url(../asset/images/trainer1.png);
+}
+.member3{
+  background-image: url(../asset/images/trainer1.png);
+}
+.member4{
+  background-image: url(../asset/images/trainer1.png);
+}
+.member5{
+  background-image: url(../asset/images/trainer1.png);
+}
+.member4{
+  background-image: url(../asset/images/trainer1.png);
+} */
