--- a/style/style.css
+++ b/style/style.css
@@ -439,8 +439,8 @@ input , select{
   margin: 0 auto;
 }
 .team-title{
-  font-size: 36px;
-  font-weight: 700;
+  font-size: 48px;
+  font-weight: 900;
   color: var(--primary-text-color);
   margin-top: 50px;
   text-align: center;
@@ -499,48 +499,52 @@ input , select{
 }
 .footer{
   background: rgba(255, 255, 255, 0.1);
-  height: 600px;
   margin-top: 88px;
 
 }
-.footer .container{
+.footer-container{
+  display: flex;
+  justify-content: space-between;
   width: 55.3%;
   margin: 0 auto;
+  padding-top: 66px;
   
 }
-
-
-
-
-
-
-
-
-
-
-/* .team-member{
-  background-color: gray;
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
+.footer-container .brand-name{
+  font-size: 70px;
+  font-weight: 800;
+  color: var(--primary-color);
 }
-.member1{
-  background-color: #e6533c;
-  background-image: url(../asset/images/trainer1.png);
-  background-repeat: no-repeat;
-  background-size: 300px 250px;
+.footer-container .text-box{
+  width: 443px;
 }
-.member2{
-  background-image: url(../asset/images/trainer1.png);
+.footer-description{
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--secondary-color);
+  line-height: 24px;
+  margin-top: 24px;
 }
-.member3{
-  background-image: url(../asset/images/trainer1.png);
+.footer-menu{
+  width: 514px;
+  display: flex;
+  justify-content: space-between;
 }
-.member4{
-  background-image: url(../asset/images/trainer1.png);
+.column1 ul li ,.column2 ul li{
+  list-style: none;
+  font-size: 18px;
+  color: var(--secondary-color);
+  padding: 12px 0;
 }
-.member5{
-  background-image: url(../asset/images/trainer1.png);
+.column1 h3 ,.column2 h3{
+  font-size: 32px;
+  font-weight: 700;
+  color: var(--primary-text-color);
+  margin-bottom: 24px;
+} 
+.copyright{
+  font-size: 18px;
+  text-align: center;
+  color: var(--secondary-color);
+  padding-bottom: 20px;
 }
-.member4{
-  background-image: url(../asset/images/trainer1.png);
-} */
