--- a/style/style.css
+++ b/style/style.css
@@ -351,6 +351,75 @@ main {
 .item-layer span{
   text-align: justify;
 }
+.priceing{
+  background-color: #161616;
+  height: 800px;
+  
+}
+.price-container{
+  width: 55.3%;
+  margin: 0 auto;
+  display: flex;
+  /* justify-content: space-between; */
+  gap: 20px;
+  padding: 250px 0;
+}
+.card-item{
+  background-color: #29282D;
+  width: 33%;
+  text-align: center;
+  border-radius: 10px;
+  padding: 50px 0;
+}
+.price{
+  font-size: 48px;
+  font-weight: 800;
+  color: var(--primary-text-color);
+  text-align: center;
+
+}
+.price-title{
+  font-size: 16px;
+  color: var(--primary-color);
+  font-weight: 400;
+  /* padding: 0 140px; */
+}
+.class-duration{
+  font-size: 24px;
+  color: var(--primary-text-color);
+  padding: 24px 0;
+}
+.card-item p{
+  font-size: 18px;
+  color: var(--primary-text-color);
+  padding: 12px 0;
+}
+.buynow{
+  background-color: var(--primary-color);
+  color: var(--primary-text-color);
+  border: none;
+  border-radius: 18px;
+  padding: 16px 40px;
+  margin-top: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Bm Calculator Section */
 .bm-textbox{
   width: 671px;
