--- a/style/mobile_device.css
+++ b/style/mobile_device.css
@@ -74,6 +74,141 @@
         width: 450px;
         margin-bottom: 18px;
       }
+      .runner-container {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        margin-top: 100px;
+        color: #fff;
+        border-radius: 18px;
+        background: rgb(34, 34, 34);
+      }
+      .runner-photo {
+        padding: 30px 30px 30px 30px;
+        width: 510px;
+        /* height: 312px; */
+      }
+      .exercise-container {
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 100px;
+        color: #fff;
+      }
+      .bm-textbox{
+        width: 671px;
+        text-align: left;
+        margin: 88px auto;
+      }
+      .bm-textbox{
+        width: 571px;
+        text-align: center;
+        margin: 88px auto;
+      }
+      .chart-calculator .container{
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        padding: 52px 0;
+      
+        
+      }
+      .calculator{
+        width: 510px;
+        
+      }
+      .cal-title,.cal-description{
+        text-align: center;
+
+      }
+      .chart{
+        width: 510px;
+        margin-bottom: 36px;
+        text-align: center;
+
+      }
+      table{
+        margin: 0 auto;
+      }
+      .chart table , th, td{
+        padding: 10px 60px;
+      }
+      .pricing .container{
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+      
+      }
+      .price-container{
+        width: 55.3%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding-bottom: 70px;
+      }
+      .card-item{
+        background-color: #29282D;
+        width: 100%;
+        text-align: center;
+        border-radius: 10px;
+        padding: 50px 0;
+      }
+      .read-more{
+        margin-top: 20px;
+      }
+      .footer-container{
+        display: flex;
+        flex-direction: column;
+        
+        width: 90%;
+        margin: 0 auto;
+        padding-top: 66px;
+        
+      }
+      .footer-menu{
+        width: 510px;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 36px;
+      }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      .team{
+        width: 90%;
+        margin: 0 auto;
+      }
+      .team-member{
+        background-color: rgba(255, 255, 255, 0.1);
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
+        padding: 10px;
+        border-radius: 18px;
+        margin-top: 24px;
+      }
 
 
 
