--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Marck+Script&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 :root {
   --primary-color: #e6533c;
@@ -93,6 +93,10 @@ body {
   color: var(--primary-text-color);
   font-weight: 900;
   margin-top: 96px;
+}
+#hand-writing{
+ font-family: "Great Vibes", cursive;
+ font-size: 9.8rem;
 }
 .banner-description {
   font-size: 1.6rem;
